--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			font-size: 12px;
 		">
 			<p>王力鹏的个人网站</p>
-			<a href="https://www.bilibili.com/">友情链接</a>
+			<a href="https://hoaxerben.github.io/re01/">我的主页</a>
 		</div>
 	</body>
 </html>
